@@ -1,4 +1,7 @@
 Version 1.0RC1/CVS+dev (?? ??? 2004)
+  - Changed encode/decode functions used in generating session cookies
+    to use md5 of install_password rather than various server variables.
+    (Hoping this may help with IE login problems...)
   - Fixed Bug 1109141: Notification language is the senders, not the recipients
     affected files edit_entry.php, del_entry.php, reject_entry.php
   - Fixed Bug 1109323: Error in LDAP get_admins function
